# tour-guide-robot

./: CMakeLists.txt
.github/workflows/: main.yml  slow_paced.yml
app/VLNav/scripts/: VLNav_llm.xml
app/navigation2/conf/: cyclone_dds_sim_settings.xml  localizationROS2_sim_madama.ini
app/navigation2/conf/robotInterface/: lidar_compressed_sim.xml  localizationROS2_madama.xml
app/navigation2/scripts/: Navigation_ROS2_R1_Madama_SIM.xml  Navigation_ROS2_R1_SIM_office.xml  ctp_service_SIM.xml  set_navigation_position.sh  start_sim_madama.sh
app/speechPipeline/conf/robotInterface/: audioTranscribe.xml
app/speechPipeline/scripts/: speechPipelineAudioFile.xml  speechPipelineConversation.xml  speechPipelineMic.xml
aux_modules/: cut_out_string.py
aux_modules/faceExpression/: earsThread.cpp  eyesThread.cpp  eyesThread.hpp  faceExpressionImage.cpp
aux_modules/speechProcessing/: CMakeLists.txt
aux_modules/speechProcessing/messages/: CMakeLists.txt
aux_modules/speechProcessing/messages/sileroVADMsgs/: CMakeLists.txt  SileroVADMsgs.thrift
aux_modules/speechProcessing/openWakeWord/: CMakeLists.txt  README.md  automatic_model_training_simple.ipynb  hey_r_one.onnx  oww.py
aux_modules/speechProcessing/sileroVAD/: CMakeLists.txt  Detector.cpp  Detector.h  README.md  SileroVADServer.cpp  SileroVADServer.h  VoiceActivationDetectionModule.cpp  VoiceActivationDetectionModule.h
aux_modules/speechProcessing/wakeWordDetection/: AudioCallback.cpp  AudioCallback.h  CMakeLists.txt  README.md  WakeWordModule.cpp  main.cpp  play_notification.py
aux_modules/tourManager/: CMakeLists.txt
docker_stuff/: docker_mng_vars.sh
docker_stuff/docker_demo/: Dockerfile
docker_stuff/docker_sim2/: Dockerfile
docker_stuff/docker_sim_alt/: Dockerfile  manage-docker.sh
docker_stuff/docker_tourCore2/: Dockerfile
docker_stuff/docker_tourCore_alt/: Dockerfile  manage-docker.sh
